--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
  <head>
+  <title>The Luminon Rising</title>
  </head>
- <body style="background-color: black;">
+ <body style="background-color: purple;">
+  <div id="header">
+    <h1 class="header">THE LUMINON RISING</h1>
+  </div>
  </body>
 </html>
