--- a/index.html
+++ b/index.html
@@ -7,5 +7,10 @@
   <div id="header">
     <h1 class="header">THE LUMINON RISING</h1>
   </div>
+  <div class="navbar">
+   <ul>
+    <li class="navbar_item"></li>
+   </ul>
+  </div>
  </body>
 </html>
